@@ -644,15 +644,13 @@ public class Schema
         assert getCFMetaData(cfm.ksName, cfm.cfName) == null;
 
         // Make sure the keyspace is initialized
-        Keyspace.open(cfm.ksName);
+        // and init the new CF before switching the KSM to the new one
+        // to avoid races as in CASSANDRA-10761
+        Keyspace.open(cfm.ksName).initCf(cfm, true);
         // Update the keyspaces map with the updated metadata
         update(cfm.ksName, ks -> ks.withSwapped(ks.tables.with(cfm)));
         // Update the table ID <-> table name map (cfIdMap)
         load(cfm);
-
-        // init the new CF before switching the KSM to the new one
-        // to avoid races as in CASSANDRA-10761
-        Keyspace.open(cfm.ksName).initCf(cfm, true);
         MigrationManager.instance.notifyCreateColumnFamily(cfm);
     }
 
