@@ -20,6 +20,7 @@ Merged from 3.0:
  * Update Java Driver (CASSANDRA-11615)
  * Avoid missing sstables when getting the canonical sstables (CASSANDRA-11996)
  * AssertionError with MVs on updating a row that isn't indexed due to a null value (CASSANDRA-12247)
+ * Fix potential race in schema during new table creation (CASSANDRA-12083)
 Merged from 2.2:
  * Persist local metadata earlier in startup sequence (CASSANDRA-11742)
  * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
